test/fails/bad_types/mat_decl1.lgl
void main() {
    mat3x3 m = [[2.3], [2.1]];
    print m;
}